k8s/app-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: 'nginx'
  name: app-ingress
spec:
  rules:
    - host: micro.thegaijin.xyz
      http:
        paths:
          - path: /account
            backend:
              serviceName: account-service
              servicePort: 2222
          - path: /customer
            backend:
              serviceName: customer-service
              servicePort: 3333
